# routes/web.php
@@ -18,11 +18,16 @@ $router->get('/', function () use ($router) {
 
 $router->group(['prefix' => 'v1'], function () use ($router) {
     $router->post('/login', ['uses' => 'UserController@login']);
-    $router->post('/logout', ['uses' => 'UserController@logout']);
-    $router->get('/get_user_list', ['uses' => 'UserController@getList']);
-    $router->post('/create_user', ['uses' => 'UserController@create']);
-    $router->post('/update_user', ['uses' => 'UserController@update']);
-    $router->get('/get_template_list', ['uses' => 'TemplateController@getList']);
-    $router->post('/create_template', ['uses' => 'TemplateController@create']);
-    $router->post('/update_template', ['uses' => 'TemplateController@update']);
+
+    $router->group(['middleware' => 'auth'], function () use ($router) {
+        $router->post('/logout', ['uses' => 'UserController@logout']);
+        $router->get('/get_user_list', ['uses' => 'UserController@getList']);
+        $router->post('/create_user', ['uses' => 'UserController@create']);
+        $router->post('/update_user', ['uses' => 'UserController@update']);
+        $router->post('/delete_user', ['uses' => 'UserController@delete']);
+        $router->get('/get_template_list', ['uses' => 'TemplateController@getList']);
+        $router->post('/create_template', ['uses' => 'TemplateController@create']);
+        $router->post('/update_template', ['uses' => 'TemplateController@update']);
+        $router->post('/delete_template', ['uses' => 'TemplateController@delete']);
+    });
 });
