# storage/api-docs/api-docs.json
@@ -174,6 +174,55 @@
                 }
             }
         },
+        "/v1/delete_template": {
+            "post": {
+                "tags": [
+                    "template"
+                ],
+                "summary": "删除模板",
+                "operationId": "App\\Http\\Controllers\\TemplateController::delete",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "id": 9
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "id": 9
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/v1/login": {
             "post": {
                 "tags": [
@@ -393,6 +442,55 @@
                                     "id": 9,
                                     "email": "admin@zzfly.net",
                                     "password": "520"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "id": 9
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/delete_user": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "删除用户",
+                "operationId": "App\\Http\\Controllers\\UserController::delete",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "id": 9
                                 }
                             }
                         }
